[tool.poetry]
name = "linearalgebra-asimjalwana-0123"
version = "0.1.0"
description = ""
authors = ["asimjalwana <jalwanamohammad@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
numpy = "^1.26.4"
twine = "^5.0.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
