[tool.poetry]
name = "linearalgebraasimjalwana0123"
version = "0.2.0"
description = "Include a new function"
authors = ["asimjalwana <jalwanamohammad@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
numpy = "^1.26.4"


[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
